removing BE text

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         </figure>
                         <p>
                            Stephen is a mechanical engineer with 5 years of experience holding key responsibilities on many product development projects for
-                            medical, consumer, and industrial markets at L-3 Mustang Technology, i-2-M, Bass Electronics, and LeTourneau University.
+                            medical, consumer, and industrial markets at L-3 Mustang Technology, i-2-M, and LeTourneau University.
                             He has a proven track record of versatility, excellent communication, and creative problem solving skills. Stephen is experienced in
                             various steps of the product development process including: Machining and rapid prototyping (500+ hrs), SolidWorks and
                             AutoDesk products (2500+ hrs), part and assembly drawings (100+), FEA (COMSOL Multiphysics and AutoDesk F360).
